--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@
 quarkus.jaeger.service-name=openapi-map
 quarkus.log.console.format={"timestamp": "%d{yyyy-MM-dd HH:mm:ss,SSS}", "loglevel": "%-5p", "class": "%c{3.}", "thread": "%t", "message": "%s%e"}%n
 quarkus.log.console.color=false
+
+quarkus.kubernetes-client.trust-certs=false
+quarkus.kubernetes-client.namespace=apps
