--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -7,8 +7,6 @@ metadata:
   labels:
     app: openapi-map
   annotations:
-    #fluxcd.io/tag.openapi-map: glob:2.*
-    #fluxcd.io/automated: 'true'
 spec:
   replicas: 1
   selector:
@@ -20,7 +18,6 @@ spec:
       labels:
         app: openapi-map
       annotations:
-        #linkerd.io/inject: enabled
         prometheus.io/scrape: 'true'
         prometheus.io/port: '8080'
     spec:
@@ -32,6 +29,8 @@ spec:
           limits:
             memory: "256Mi"
         env:
+        - name: NAMESPACE
+          value: 'apps'
         - name: JAEGER_ENDPOINT
           value: 'http://jaeger-collector.monitoring:14268/api/traces'
         - name: JAEGER_SAMPLER_TYPE
