--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: openapi-map
-  namespace: apps
+  namespace: openapi-map
   labels:
     app: openapi-map
   annotations:
