Always add swagger ui.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ quarkus.log.console.color=false
 
 quarkus.kubernetes-client.trust-certs=false
 quarkus.kubernetes-client.namespace=apps
+
+quarkus.swagger-ui.always-include=true
