--- a/.drone.yml
+++ b/.drone.yml
@@ -20,3 +20,23 @@ trigger:
   event:
     exclude:
     - tag
+---
+
+kind: pipeline
+name: default
+
+steps:
+  - name: build-openapi-map
+    image: plugins/docker
+    settings:
+      repo: mejlholm/openapi-map
+      dry-run: true
+      username:
+        from_secret: docker_hub_username
+      password:
+        from_secret: docker_hub_password
+
+trigger:
+  branch:
+    excludes: master
+  event: pull_request
