--- a/.drone.yml
+++ b/.drone.yml
@@ -30,7 +30,7 @@ steps:
     image: plugins/docker
     settings:
       repo: mejlholm/openapi-map
-      dry-run: true
+      dry_run: true
       username:
         from_secret: docker_hub_username
       password:
