--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-opentracing</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-undertow</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.quarkus</groupId>
