Reduce logging and make sure we log using json.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-# Configuration file
-# key = value
+# Tracing
 quarkus.jaeger.service-name=openapi-map
-quarkus.log.console.format={"timestamp": "%d{yyyy-MM-dd HH:mm:ss,SSS}", "loglevel": "%-5p", "class": "%c{3.}", "thread": "%t", "message": "%s%e"}%n
-quarkus.log.console.color=false
 
+# Logging
+quarkus.log.level=INFO
+quarkus.log.console.level=INFO
+%dev.quarkus.log.console.json=false
+%test.quarkus.log.console.json=false
+
+# OpenAPI
+quarkus.swagger-ui.always-include=true
+
+# Kubernetes
 quarkus.kubernetes-client.trust-certs=false
 quarkus.kubernetes-client.namespace=apps
-
-quarkus.swagger-ui.always-include=true
